--- a/public/style.scss
+++ b/public/style.scss
@@ -1,26 +1,26 @@
 @font-face {
   font-family: LogoFont;
-  src: url("../assets/font/logo.ttf") format("truetype");
+  src: url("assets/font/logo.ttf") format("truetype");
 }
 
 @font-face {
   font-family: ExoBoldItalic;
-  src: url("../assets/font/ExoBoldItalic.ttf") format("truetype");
+  src: url("assets/font/ExoBoldItalic.ttf") format("truetype");
 }
 
 @font-face {
   font-family: ExoSemiBold;
-  src: url("../assets/font/ExoSemiBold.ttf") format("truetype");
+  src: url("assets/font/ExoSemiBold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: ExoMedium;
-  src: url("../assets/font/ExoMedium.ttf") format("truetype");
+  src: url("assets/font/ExoMedium.ttf") format("truetype");
 }
 
 @font-face {
   font-family: ExoRegular;
-  src: url("../assets/font/ExoRegular.ttf") format("truetype");
+  src: url("assets/font/ExoRegular.ttf") format("truetype");
 }
 
 
@@ -69,7 +69,7 @@
 }
 
 #first_block {
-  background-image: url("../assets/img/bg1.jpg");
+  background-image: url("assets/img/bg1.jpg");
   background-blend-mode: multiply;
   background-color: rgba(0, 0, 0, 0.7) ;
   background-repeat: no-repeat;
@@ -150,7 +150,7 @@
 
 
 #second_block {
-  background-image: url("../assets/img/bg2.png");
+  background-image: url("assets/img/bg2.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
