--- a/public/mobile-style.css
+++ b/public/mobile-style.css
@@ -1,23 +1,3 @@
-@font-face {
-  font-family: LogoFont;
-  src: url("assets/font/logo.ttf") format("truetype");
-}
-@font-face {
-  font-family: ExoBoldItalic;
-  src: url("assets/font/ExoBoldItalic.ttf") format("truetype");
-}
-@font-face {
-  font-family: ExoSemiBold;
-  src: url("assets/font/ExoSemiBold.ttf") format("truetype");
-}
-@font-face {
-  font-family: ExoMedium;
-  src: url("assets/font/ExoMedium.ttf") format("truetype");
-}
-@font-face {
-  font-family: ExoRegular;
-  src: url("assets/font/ExoRegular.ttf") format("truetype");
-}
 .header {
   position: absolute;
   width: 100%;
@@ -38,6 +18,11 @@
   margin-top: 23px;
 }
 
+@media (max-width: 570px) {
+  .logo {
+    font-size: 14px;
+  }
+}
 .right-info-bar {
   font-family: "ExoMedium";
   font-size: 14px;
@@ -179,48 +164,4 @@
   -webkit-text-stroke: 1px rgba(255, 255, 255, 0.2);
 }
 
-@media (max-width: 570px) {
-  .logo {
-    font-size: 16px;
-  }
-
-  .right-info-bar {
-    font-size: 12px;
-  }
-
-  #first_block .title {
-    font-size: 24px;
-    line-height: 26px;
-  }
-  #first_block .desc {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  #first_block .bottom-logo {
-    font-size: 36px;
-    line-height: 40px;
-    letter-spacing: 5px;
-  }
-
-  .request_quote {
-    font-size: 18px;
-    line-height: 20px;
-    padding: 18px 18px;
-  }
-
-  #second_block .title {
-    font-size: 24px;
-    line-height: 26px;
-  }
-  #second_block .desc {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  #second_block .bottom-logo {
-    font-size: 36px;
-    line-height: 40px;
-    letter-spacing: 5px;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=mobile-style.css.map */
