Changed font size for mobile

--- a/public/mobile-style.scss
+++ b/public/mobile-style.scss
@@ -16,11 +16,12 @@
     .desc {
       font-size: 14px;
       line-height: 16px;
+      max-width: 40ch;
     }
 
     .bottom-logo {
-      font-size: 36px;
-      line-height: 40px;
+      font-size: 34px;
+      line-height: 36px;
       letter-spacing: 5px;
     }
   }
@@ -43,8 +44,8 @@
     }
 
     .bottom-logo {
-      font-size: 36px;
-      line-height: 40px;
+      font-size: 34px;
+      line-height: 36px;
       letter-spacing: 5px;
     }
   }
