--- a/public/style.scss
+++ b/public/style.scss
@@ -1,5 +1,3 @@
-
-
 @font-face {
   font-family: LogoFont;
   src: url("assets/font/logo.ttf") format("truetype");
@@ -23,6 +21,11 @@
 @font-face {
   font-family: ExoRegular;
   src: url("assets/font/ExoRegular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: ExoLight;
+  src: url("assets/font/ExoLight.ttf") format("truetype");
 }
 
 .header {
@@ -178,6 +181,106 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+  }
+
+  .bottom-logo {
+    font-family: LogoFont;
+    font-size: 184px;
+    line-height: 240px;
+    letter-spacing: 10px;
+    position: absolute;
+    float: left;
+    bottom: -100vh;
+    left: 0;
+    color: rgba(255, 255, 255, 0);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.2);
+  }
+}
+
+#third_block {
+  background-image: url("assets/img/bg3.png");
+  background-blend-mode: overlay;
+  background-color: rgba(253, 74, 1, 0.8) ;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .title {
+    font-family: ExoLight;
+    font-size: 46px;
+    line-height: 58px;
+    color: #FFFFFF;
+    margin-top: 90px;
+  }
+
+  .slider {
+    margin-top: 50px;
+    margin-right: 75px;
+    margin-left: 75px;
+  }
+
+  .slide {
+    font-family: 'ExoRegular';
+    font-size: 38px;
+    line-height: 92px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    padding: 20px 20px;
+  }
+
+  .slide1 {
+    background-image: url("assets/img/first_slide.png");
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 300px;
+  }
+
+  .slide2 {
+    background-image: url("assets/img/second_slide.png");
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 300px;
+  }
+
+  .slide3 {
+    background-image: url("assets/img/third_slide.png");
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 300px;
+  }
+
+  .slide4 {
+    background-image: url("assets/img/fourth_slide.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 400px;
+    height: 300px;
+  }
+
+  .title-slide{
+    font-family: 'ExoSemiBold';
+    font-size: 30px;
+    line-height: 34px;
+    color: #FFFFFF;
+    text-align: left;
+  }
+
+  .text-slide{
+    font-family: 'ExoLight';
+    font-size: 24px;
+    line-height: 26px;
+    text-align: left;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    width: 400px;
+    margin-top: 20px;
   }
 
   .bottom-logo {
