--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -324,7 +324,7 @@ svg:hover path {
   position: absolute;
   background: rgba(253, 74, 1, 0.8);
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 @media (max-width: 576px) {
@@ -637,6 +637,7 @@ svg:hover path {
   #first_block .title {
     font-size: 40px;
     line-height: 42px;
+    margin-top: 150px;
   }
   #first_block .desc {
     font-size: 24px;
@@ -656,12 +657,13 @@ svg:hover path {
   }
 
   #second_block .title {
-    font-size: 24px;
-    line-height: 26px;
+    font-size: 40px;
+    line-height: 42px;
+    margin-top: 150px;
   }
   #second_block .desc {
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 24px;
+    line-height: 26px;
   }
   #second_block .bottom-logo {
     font-size: 34px;
@@ -669,6 +671,9 @@ svg:hover path {
     letter-spacing: 5px;
   }
 
+  #third_block {
+    display: none;
+  }
   #third_block .title {
     z-index: 1;
     font-size: 24px;
@@ -713,27 +718,19 @@ svg:hover path {
     margin-top: 20px;
   }
 }
-@media (max-width: 1400px) and (min-width: 1201px) {
-  .logo {
-    font-size: 16px;
-  }
-
-  .right-info-bar {
-    font-size: 12px;
-  }
-
+@media (max-width: 1500px) and (min-width: 1201px) and (max-height: 800px) and (min-height: 700px) {
   #first_block .title {
-    font-size: 24px;
-    line-height: 26px;
+    font-size: 42px;
+    line-height: 46px;
   }
   #first_block .desc {
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 24px;
+    line-height: 26px;
     max-width: 40ch;
   }
   #first_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
+    font-size: 98px;
+    line-height: 100px;
     letter-spacing: 5px;
   }
 
@@ -744,17 +741,22 @@ svg:hover path {
   }
 
   #second_block .title {
+    font-size: 42px;
+    line-height: 46px;
+    margin-top: 150px;
+  }
+  #second_block .desc {
     font-size: 24px;
     line-height: 26px;
   }
-  #second_block .desc {
-    font-size: 14px;
-    line-height: 16px;
-  }
   #second_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
+    font-size: 98px;
+    line-height: 100px;
     letter-spacing: 5px;
+  }
+
+  #third_block {
+    display: none;
   }
 }
 
