--- a/public/assets/styles/style.scss
+++ b/public/assets/styles/style.scss
@@ -359,7 +359,7 @@ svg {
     position: absolute;
     background: rgba(253, 74, 1, 0.8);
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 }
 
