--- a/public/assets/styles/xl-style.scss
+++ b/public/assets/styles/xl-style.scss
@@ -26,6 +26,7 @@
     .title {
       font-size: 40px;
       line-height: 42px;
+      margin-top: 150px;
     }
 
     .desc {
@@ -49,13 +50,14 @@
 
   #second_block {
     .title {
-      font-size: 24px;
-      line-height: 26px;
+      font-size: 40px;
+      line-height: 42px;
+      margin-top: 150px;
     }
 
     .desc {
-      font-size: 14px;
-      line-height: 16px;
+      font-size: 24px;
+      line-height: 26px;
     }
 
     .bottom-logo {
@@ -66,6 +68,8 @@
   }
 
   #third_block {
+    display: none;
+
     .title {
       z-index: 1;
       font-size: 24px;
