--- a/public/assets/styles/xxl-style.scss
+++ b/public/assets/styles/xxl-style.scss
@@ -1,27 +1,19 @@
-@media (max-width: 1400px) and (min-width: 1201px) {
-  .logo {
-    font-size: 16px;
-  }
-
-  .right-info-bar {
-    font-size: 12px;
-  }
-
+@media (max-width: 1500px) and (min-width: 1201px) and (max-height: 800px) and (min-height: 700px){
   #first_block {
     .title {
-      font-size: 24px;
-      line-height: 26px;
+      font-size: 42px;
+      line-height: 46px;
     }
 
     .desc {
-      font-size: 14px;
-      line-height: 16px;
+      font-size: 24px;
+      line-height: 26px;
       max-width: 40ch;
     }
 
     .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
+      font-size: 98px;
+      line-height: 100px;
       letter-spacing: 5px;
     }
   }
@@ -34,19 +26,24 @@
 
   #second_block {
     .title {
+      font-size: 42px;
+      line-height: 46px;
+      margin-top: 150px;
+    }
+
+    .desc {
       font-size: 24px;
       line-height: 26px;
     }
 
-    .desc {
-      font-size: 14px;
-      line-height: 16px;
-    }
-
     .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
+      font-size: 98px;
+      line-height: 100px;
       letter-spacing: 5px;
     }
+  }
+
+  #third_block {
+    display: none;
   }
 }
