--- a/public/assets/styles/style.scss
+++ b/public/assets/styles/style.scss
@@ -38,7 +38,7 @@
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(6px);
   width: 100%;
-  z-index: 1;
+  z-index: 7;
 
   .menu {
     display: flex;
@@ -260,7 +260,7 @@ svg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
