--- a/public/assets/styles/style.scss
+++ b/public/assets/styles/style.scss
@@ -265,6 +265,7 @@ svg {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 
   .title {
     z-index: 1;
