Changed adaptive styles

--- a/public/assets/styles/lg-style.scss
+++ b/public/assets/styles/lg-style.scss
@@ -6,7 +6,7 @@
   .header {
     .menu {
       li {
-        font-size: 15px;
+        font-size: 1.8vw;
         margin-right: 12px;
       }
     }
@@ -33,12 +33,6 @@
       line-height: 22px;
       max-width: 50ch;
     }
-
-    .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
-      letter-spacing: 5px;
-    }
   }
 
   .request_quote {
@@ -56,12 +50,6 @@
     .desc {
       font-size: 14px;
       line-height: 16px;
-    }
-
-    .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
-      letter-spacing: 5px;
     }
   }
 
