--- a/public/assets/styles/md-style.scss
+++ b/public/assets/styles/md-style.scss
@@ -6,7 +6,7 @@
   .header {
     .menu {
       li {
-        font-size: 14px;
+        font-size: 2.5vw;
         margin-right: 12px;
       }
     }
@@ -28,12 +28,6 @@
       line-height: 20px;
       max-width: 40ch;
     }
-
-    .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
-      letter-spacing: 5px;
-    }
   }
 
   .request_quote {
@@ -51,12 +45,6 @@
     .desc {
       font-size: 14px;
       line-height: 16px;
-    }
-
-    .bottom-logo {
-      font-size: 34px;
-      line-height: 36px;
-      letter-spacing: 5px;
     }
   }
 
