--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -23,8 +23,8 @@
   src: url("../font/ExoLight.ttf") format("truetype");
 }
 @font-face {
-  font-family: Segoe;
-  src: url("../font/Segoe.ttf") format("truetype");
+  font-family: DelaGothicOne;
+  src: url("../font/DelaGothicOne.ttf") format("truetype");
 }
 .header {
   position: fixed;
@@ -40,8 +40,8 @@
   list-style-type: none;
 }
 .header .menu li {
-  font-family: Segoe;
-  font-size: 19px;
+  font-family: DelaGothicOne;
+  font-size: 0.7vw;
   color: #FFFFFF;
   margin-right: 60px;
   transition: 0.3s;
@@ -130,8 +130,8 @@
 }
 #first_block .bottom-logo {
   font-family: LogoFont;
-  font-size: 184px;
-  line-height: 240px;
+  font-size: 6vw;
+  line-height: 5.5vw;
   letter-spacing: 10px;
   position: absolute;
   float: left;
@@ -219,9 +219,9 @@ svg:hover path {
 }
 #second_block .bottom-logo {
   font-family: LogoFont;
-  font-size: 184px;
-  line-height: 240px;
-  letter-spacing: 10px;
+  font-size: 6vw;
+  line-height: 5.5vw;
+  letter-spacing: 5px;
   position: absolute;
   float: left;
   bottom: -100vh;
@@ -334,7 +334,7 @@ svg:hover path {
   }
 
   .header .menu li {
-    font-size: 14px;
+    font-size: 2.5vw;
     margin-right: 12px;
   }
 
@@ -352,11 +352,6 @@ svg:hover path {
     line-height: 16px;
     max-width: 40ch;
   }
-  #first_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
-  }
 
   .request_quote {
     font-size: 18px;
@@ -371,11 +366,6 @@ svg:hover path {
   #second_block .desc {
     font-size: 14px;
     line-height: 16px;
-  }
-  #second_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
   }
 
   #third_block .title {
@@ -428,7 +418,7 @@ svg:hover path {
   }
 
   .header .menu li {
-    font-size: 14px;
+    font-size: 2.5vw;
     margin-right: 12px;
   }
 
@@ -446,11 +436,6 @@ svg:hover path {
     line-height: 20px;
     max-width: 40ch;
   }
-  #first_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
-  }
 
   .request_quote {
     font-size: 18px;
@@ -465,11 +450,6 @@ svg:hover path {
   #second_block .desc {
     font-size: 14px;
     line-height: 16px;
-  }
-  #second_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
   }
 
   #third_block .title {
@@ -522,7 +502,7 @@ svg:hover path {
   }
 
   .header .menu li {
-    font-size: 15px;
+    font-size: 1.8vw;
     margin-right: 12px;
   }
 
@@ -545,11 +525,6 @@ svg:hover path {
     line-height: 22px;
     max-width: 50ch;
   }
-  #first_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
-  }
 
   .request_quote {
     font-size: 18px;
@@ -564,11 +539,6 @@ svg:hover path {
   #second_block .desc {
     font-size: 14px;
     line-height: 16px;
-  }
-  #second_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
   }
 
   #third_block .title {
@@ -621,7 +591,7 @@ svg:hover path {
   }
 
   .header .menu li {
-    font-size: 18px;
+    font-size: 2.5vw;
     margin-right: 18px;
   }
 
@@ -645,11 +615,6 @@ svg:hover path {
     line-height: 26px;
     max-width: 50ch;
   }
-  #first_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
-  }
 
   .request_quote {
     font-size: 18px;
@@ -666,15 +631,7 @@ svg:hover path {
     font-size: 24px;
     line-height: 26px;
   }
-  #second_block .bottom-logo {
-    font-size: 34px;
-    line-height: 36px;
-    letter-spacing: 5px;
-  }
 
-  #third_block {
-    display: none;
-  }
   #third_block .title {
     z-index: 1;
     font-size: 24px;
@@ -719,7 +676,13 @@ svg:hover path {
     margin-top: 20px;
   }
 }
-@media (max-width: 1500px) and (min-width: 1201px) and (max-height: 800px) and (min-height: 700px) {
+@media (max-width: 1500px) and (min-width: 1201px) {
+  .header .menu li {
+    font-size: 1.8vw;
+    margin-right: 18px;
+    letter-spacing: 2px;
+  }
+
   #first_block .title {
     font-size: 42px;
     line-height: 46px;
@@ -728,11 +691,6 @@ svg:hover path {
     font-size: 24px;
     line-height: 26px;
     max-width: 40ch;
-  }
-  #first_block .bottom-logo {
-    font-size: 98px;
-    line-height: 100px;
-    letter-spacing: 5px;
   }
 
   .request_quote {
@@ -749,15 +707,6 @@ svg:hover path {
   #second_block .desc {
     font-size: 24px;
     line-height: 26px;
-  }
-  #second_block .bottom-logo {
-    font-size: 98px;
-    line-height: 100px;
-    letter-spacing: 5px;
-  }
-
-  #third_block {
-    display: none;
   }
 }
 
