--- a/public/assets/styles/xxl-style.scss
+++ b/public/assets/styles/xxl-style.scss
@@ -1,4 +1,14 @@
-@media (max-width: 1500px) and (min-width: 1201px) and (max-height: 800px) and (min-height: 700px){
+@media (max-width: 1500px) and (min-width: 1201px){
+  .header {
+    .menu {
+      li {
+        font-size: 1.8vw;
+        margin-right: 18px;
+        letter-spacing: 2px;
+      }
+    }
+  }
+
   #first_block {
     .title {
       font-size: 42px;
@@ -9,12 +19,6 @@
       font-size: 24px;
       line-height: 26px;
       max-width: 40ch;
-    }
-
-    .bottom-logo {
-      font-size: 98px;
-      line-height: 100px;
-      letter-spacing: 5px;
     }
   }
 
@@ -35,15 +39,8 @@
       font-size: 24px;
       line-height: 26px;
     }
-
-    .bottom-logo {
-      font-size: 98px;
-      line-height: 100px;
-      letter-spacing: 5px;
-    }
   }
 
   #third_block {
-    display: none;
   }
 }
